force-app/main/default/objects/ChargeOver_Transaction__c/ChargeOver_Transaction__c.object-meta.xml
<CustomObject>
    <label>ChargeOver Transaction</label>
    <nameField>
        <label>ChargeOver Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChargeOver Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>