force-app/main/default/objects/ChargeOver_Transaction__c/fields/Campaign_ID_Content__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_Content__c</fullName>
    <description>The name of the page or email used for submitting a payment. The value included as part of the utm_content field</description>
    <label>Campaign ID (Content)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>