force-app/main/default/objects/ChargeOver_Transaction__c/fields/Chargeback_Prevention_Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Prevention_Alert_Status__c</fullName>
    <description>The status of any chargeback prevention for this transaction</description>
    <label>Chargeback Prevention Alert Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB Alert - Received</fullName>
            </value>
            <value>
                <fullName>CB Alert - Issued Refund</fullName>
            </value>
            <value>
                <fullName>CB Alert - No Refund</fullName>
            </value>
            <value>
                <fullName>CB Alert - Other Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>