force-app/main/default/objects/ChargeOver_Transaction__c/fields/Chargeback_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Status__c</fullName>
    <label>Chargeback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chargeback Received</fullName>
            </value>
            <value>
                <fullName>Chargeback Won</fullName>
            </value>
            <value>
                <fullName>Chargeback Lost</fullName>
            </value>
            <value>
                <fullName>Pre-Arb Received</fullName>
            </value>
            <value>
                <fullName>Pre-Arb Not Disputed / Lost</fullName>
            </value>
            <value>
                <fullName>Pre-Arb Won</fullName>
            </value>
            <value>
                <fullName>Retrieval Request</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
                <isActive>false</isActive>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Won</fullName>
                <isActive>false</isActive>
                <label>Won</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>