force-app/main/default/objects/ChargeOver_Transaction__c/fields/Email_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender_Name__c</fullName>
    <description>The name of the user that sent the email with the payment link</description>
    <label>Email Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>