force-app/main/default/objects/ChargeOver_Transaction__c/fields/Original_ChargeOver_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Original_ChargeOver_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original ChargeOver Transaction</label>
    <referenceTo>ChargeOver_Transaction__c</referenceTo>
    <relationshipLabel>Original ChargeOver Transactions</relationshipLabel>
    <relationshipName>ChargeOver_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>