force-app/main/default/objects/ChargeOver_Transaction__c/fields/Payment_Gateway_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Error_Message__c</fullName>
    <label>Payment Gateway Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>