force-app/main/default/objects/ChargeOver_Transaction__c/fields/Payment_Gateway_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Gateway Status</label>
    <type>Checkbox</type>
</CustomField>