force-app/main/default/objects/ChargeOver_Transaction__c/fields/Payment_Processed_By_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processed_By_Term__c</fullName>
    <description>The name of the sales rep that processed a payment. The value included as part of the utm_term field</description>
    <label>Payment Processed By (Term)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>