force-app/main/default/objects/ChargeOver_Transaction__c/fields/Payment_Processing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processing_Channel__c</fullName>
    <description>The channel though which the client&apos;s payment was processed</description>
    <label>Payment Processing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ChargeOver</fullName>
            </value>
            <value>
                <fullName>ChargeOver Email</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Pricing Calculator</fullName>
            </value>
            <value>
                <fullName>Sales Collection</fullName>
            </value>
            <value>
                <fullName>Salesforce Email</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>