force-app/main/default/objects/ChargeOver_Transaction__c/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <description>The name of the Sales Rep that processed the payment either through the pricing calculator or by using an invoice link</description>
    <label>Sales Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>