force-app/main/default/objects/ChargeOver_Transaction__c/fields/Transaction_Method__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Method__c</fullName>
    <label>Transaction Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>