force-app/main/default/objects/ChargeOver_Transaction__c/fields/Transaction_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Details__c</fullName>
    <label>Transaction Type Details</label>
    <length>32</length>
    <type>Text</type>
</CustomField>