force-app/main/default/objects/ChargeOver_Transaction__c/fields/Transaction_Void_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Void_Date__c</fullName>
    <label>Transaction Void Date</label>
    <type>DateTime</type>
</CustomField>