force-app/main/default/objects/ChargeOver_Transaction__c/fields/View_in_ChargeOver__c.field-meta.xml
<CustomField>
    <fullName>View_in_ChargeOver__c</fullName>
    <label>View in ChargeOver</label>
    <type>Url</type>
</CustomField>