force-app/main/default/objects/ChargeOver_Transaction__c/fields/Voided_Payment__c.field-meta.xml
<CustomField>
    <fullName>Voided_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this transaction was voided by another transaction</description>
    <label>Voided Payment</label>
    <type>Checkbox</type>
</CustomField>